# CosmoNPC

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  run_stat.py
CosmoNPC/: catalog_processor.py  config_bk sugi.py  config_bk_sugi.py  config_bk_sugi_cross.py  config_pk.py  config_pk_survey.py  main.py  math_funcs.py  mesh_generator.py  stat_algorithm.py
res_comparison/: comparison.md
src/cosmonpc/: __init__.py  catalog_processor.py  clustering_estimator.py  math_evaluator.py  math_funcs.py  mesh_generator.py  param_helper.py  run.py  stat_algorithm.py  stat_estimator.py  task_executor.py
src/cosmonpc/config/: bk_sugi_box.py  bk_sugi_survey.py  pk_box.py  pk_survey.py
