[project]
name = "CosmoNPC"
version = "0.2.0"
description = "CosmoNPC is a Python/MPI code for mesh-based measurements of large-scale structure statistics"
readme = "README.md"
authors = [
    { name = "Yunchen Xie", email = "xieyunchen20@mails.ucas.ac.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.7",
    "fitsio>=1.3.0",
    "h5py>=3.15.1",
    "mpi4py>=4.1.1",
    "numexpr>=2.14.1",
    "numpy>=1.26.4",
    "pmesh>=0.1.59",
    "sympy>=1.14.0",
    "scipy>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
